hsp3-forgery/tests/syntax_error/syntax_error.hsp
	mes a()()
	mes (a)()

	button "", *
*
